add hero to post

--- a/content/posts/2024-06-18-react.js-useeffect-how-to-prevent-component-weird-bahaviour-due-to-multiple-out-of-order-server-fetches.md
+++ b/content/posts/2024-06-18-react.js-useeffect-how-to-prevent-component-weird-bahaviour-due-to-multiple-out-of-order-server-fetches.md
@@ -9,9 +9,10 @@ categories:
     - React.js
 type: posts
 slug: react-js-useeffect-prevent-component-weird-bahaviour-due-multiple-order-server-fetches
+hero: /images/posts/2024-06-18-react-js-useeffect-prevent-component-weird.png
 ---
 
-To prevent out-of-sync Redux dispatches which could result in unexpected behaviors due to asynchronous server requests returning at different times, we need to ensure that we handle component unmounts or updates correctly. This ensures that when a component re-renders or unmounts, for several reasons like a user clicks on another link related to the same component, it does not attempt to set state based on outdated or irrelevant asynchronous responses.
+To prevent out-of-sync React Redux toolkit dispatches or just plain react.js in general which could result in unexpected behaviors due to asynchronous server requests returning at different times, we need to ensure that we handle component unmounts or updates correctly. This ensures that when a component re-renders or unmounts, for several reasons like a user clicks on another link related to the same component, it does not attempt to set state based on outdated or irrelevant asynchronous responses.
 
 This weird behaviour could result in items from the old server request being rendered or screen flicks happening.
 
